# design-patterns-in-cpp

./: README.md
SOLID-design-principles/single-responsibility-principle/: CMakeLists.txt  main.cpp
